--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>I am so grateful</p>
-				<p>to have such a phenomenal woman in my life.</p>
+				<p>to have such a phenomenal Girl in my life.</p>
 				<p>You are the perfect algorithm</p>
 				<p>to my heart,</p>
 				<p>the bug-free code</p>
