--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday</title>
-	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Xola">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="index, follow" />
 	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
@@ -16,7 +15,7 @@
     <meta property="og:image" content="favicon.ico" />
     <meta property="og:description" content="Wish you a very Happy Birthday">
     <!-- End of Facebook Meta Tags -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0"> -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
@@ -27,9 +26,36 @@
 	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet/less" href="cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
+
+	<style>
+		html, body {
+			margin: 0;
+			padding: 0;
+			height: 100%;
+			/* overflow: scroll; Prevent scrollbars on the parent page */
+			overflow: auto;
+		}
+	
+		section {
+			height: 100vh; /* Take the full viewport height */
+		}
+	
+		iframe {
+			width: 100%;
+			height: 100%; /* Make the iframe take full height */
+			border: none;
+		}
+	</style>
 </head>
 
 <body>
+
+	<section>
+		<!-- <iframe src="deeksha.html" width="100%" height="100%" frameborder="0" style="border: none; overflow: auto;"></iframe> -->
+		<iframe src="deeksha.html" width="100%" height="100%" frameborder="0" style="border: none;"></iframe>
+
+	</section>
+
 	<div class="loading"></div>
 	<audio class="song" controls loop>
         <source src="hbd.mp3"></source>
@@ -82,12 +108,12 @@
 				<div class="bulb" id="bulb_orange"></div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-12 text-center">
+		<!-- <div class="row"> -->
+			<!-- <div class="col-md-12 text-center"> -->
 				<!-- <img src="banner1.png" class="bannar"> -->
-				<img src="deeksha.png" class="bannar">
-			</div>
-		</div>
+				<!-- <img src="deeksha.png" class="bannar"> -->
+			<!-- </div> -->
+		<!-- </div> -->
 		<div class="row cake-cover">
 			<div class="col-md-12 texr-center">
 				<div class="cake">
@@ -108,11 +134,11 @@
 				<p>I am so grateful</p>
 				<p>to have such a phenomenal woman in my life.</p>
 				<p>You are the perfect algorithm</p>
-				<p>to my heart,</p>
+				<p>to my heart ❤️,</p>
 				<p>the bug-free code</p>
 				<p>that makes my world run smoothly.</p>
 				<p>No matter the distance,</p>
-				<p>our connection</p>
+				<p>our connection 🤝</p>
 				<p>will never lose signal.</p>
 				<p>Your place in my heart</p>
 				<p>is a permanent variable,</p>
@@ -130,7 +156,7 @@
 				<p>so special to you</p>
 				<p>that's why</p>
 				<p>Let's make it...</p>
-				<p>the best celebration ever</p>s
+				<p>the best celebration ever</p>
 				<p>and let me share...</p>
 				<p>a piece of happiness to you</p>
 				<p>I made all this...</p>
@@ -149,7 +175,7 @@
 				<p>keep your spirit up</p>
 				<p>enjoy every single moment...</p>
 				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
+				<p>fill it with your most beautiful smile 😊</p>
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
